--- a/modules/ROOT/pages/code.adoc
+++ b/modules/ROOT/pages/code.adoc
@@ -1,17 +1,10 @@
 = CODES
 
-== Routes
-.GatewayConfiguration.java
-[source, java]
-----
-include::CODE:example$config-server/src/main/java/com/moviedatabase/config-server/GatewayConfiguration.java[]
-----
-
 == Main
-.GatewayServerApplication.java
+.ConfigServerApplication.java
 [source, java]
 ----
-include::CODE:example$config-server/src/main/java/com/moviedatabase/config-server/GatewayServerApplication.java[]
+include::CODE:example$config-server/src/main/java/com/moviedatabase/config-server/ConfigServerApplication.java[]
 ----
 
 == Properties:
